# hilbert-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
results/: ablation_findings.md  ablation_projection.csv  filtered_findings.md  filtered_sweep.csv  learning_curve.csv  multicurve.csv  recall_unfiltered.csv
scripts/: build_corpus.py  build_oracle.py  embed_corpus.py  make_plots.py  run_ablation.py  run_filtered_sweep.py  run_learning_curve.py  run_multicurve.py  run_recall_unfiltered.py  setup-env.sh  train_projection.py  verify_container.sh
src/hilbert_rag/: __init__.py  baselines.py  benchmark.py  cascade.py  config.py  data.py  embeddings.py  filtered.py  oracle.py  projection.py  service.py  sfc_index.py
tests/: test_baselines.py  test_benchmark.py  test_cascade.py  test_config.py  test_data.py  test_embeddings.py  test_filtered.py  test_oracle.py  test_projection.py  test_service.py  test_sfc_index.py
