[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hilbert-rag"
version = "0.1.0"
description = "CPU-native RAG retrieval with a Hilbert space-filling-curve index for filtered retrieval and a trained projection head."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Sami Ennedoui" }]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "pandas>=2.1",
  "pyarrow>=15",
  "sentence-transformers>=2.7",
  "faiss-cpu>=1.8",
  "torch>=2.2",
  "hilbertcurve>=2.0",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.6",
  "openai>=1.30",
  "matplotlib>=3.8",
  "tqdm>=4.66",
  "datasets>=2.19",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["src/hilbert_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
